2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		- DocumentModifier.run() now is called with DocumentManager
		  instead of SVGDocument. -> fetching unique IDs is possible
		- import of images via ImageIO added

	* src/de/intevation/printlayout/tools/BoxFactory.java:
		Uses new DocumentModifier.

	* src/de/intevation/printlayout/LayoutFrame.java:
		- reordered menus
		- add menu item to import image

2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java,
	  src/de/intevation/printlayout/PrintLayoutPlugin.java,
	  src/de/intevation/printlayout/tools/BoxInteractor.java,
	  src/de/intevation/printlayout/tools/BoxFactory.java:
		removed needless imports. 

	* src/de/intevation/printlayout/resources/a4.svg:
		tolerate overflow in outer SVG

2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		support for tools

	* src/de/intevation/printlayout/DocumentManager.java:
		getSVGDocument() added

	* src/de/intevation/printlayout/tools/DrawingAttributes.java:
		stores different attributes for drawing, color, stroke etc.

	* src/de/intevation/printlayout/tools/BoxInteractor.java:
		tool to draw filled boxes.

	* src/de/intevation/printlayout/tools/BoxFactory.java:
		produces a box an append it to SVG DOM.

2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		scale map proportional.

2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		using menus instead of buttons. make LayoutFrame a JFrame

	* src/de/intevation/printlayout/PrintLayoutPlugin.java:
		using LayoutFrame as a JFrame

2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		set (x, y, width, height) of the generated map svg