@@ -1,3 +1,11 @@
+2007-01-17  Sascha L. Teichmann <sascha.teichmann@intevation.de>
+
+	* src/de/intevation/printlayout/tools/BoxFactory.java,
+	  src/de/intevation/printlayout/tools/BoxInteractor.java:
+		fix for boxes with negative width or height
+
+	* src/de/intevation/printlayout/DocumentManager.java:
+
 2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>
 
 	* src/de/intevation/printlayout/DocumentManager.java:
